Fix alignments for desktop

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -10,6 +10,7 @@
 
     .about-container {
         max-width: 800px;
+        margin: 0 auto;
 
         @media (min-width: $desktop) {
             // border box design when on desktop
@@ -23,12 +24,16 @@
             text-align: center;
 
             @media (min-width: $tablet) {
-                margin: 0;
+                margin-top: 0;
             }
         }
         p {
             @media (min-width: $tablet) {
-                margin: 2.5rem 0 3rem 0.5rem;
+                margin: 0 auto 3rem;
+
+                &:nth-child(3) {
+                    margin-bottom: 0;
+                }
             }
         }
         a {
